--- a/ops/ansible/ancillary-minio.yml
+++ b/ops/ansible/ancillary-minio.yml
@@ -32,13 +32,13 @@
     register: secret_key
     changed_when: False
   - name: Create docker secret access_key
-    shell: "echo {{ access_key }} | /usr/bin/docker secret create access_key -"
+    shell: "echo {{ access_key['std_out'] }} | /usr/bin/docker secret create access_key -"
     retries: 3
     delay: 20
     register: result
     until: result.rc == 0
   - name: Create docker secret secret_key
-    shell: "echo {{ secret_key }} | /usr/bin/docker secret create secret_key -"
+    shell: "echo {{ secret_key['std_out'] }} | /usr/bin/docker secret create secret_key -"
     retries: 3
     delay: 20
     register: result
@@ -59,6 +59,6 @@
   - name: Deploy minio stack
     command: "/usr/bin/docker stack deploy --compose-file=/tmp/osparc-simcore/ops/ansible/roles/minio/files/docker-compose.yml minio"
   - debug: 
-      var: access_key
+      msg: "Minio Access Key: {{ access_key['std_out'] }}"
   - debug:
-      var: secret_key
+      var: "Minio Secret Key: {{ secret_key['std_out'] }}"
