--- a/ops/ansible/roles/minio/tasks/ubuntu.yml
+++ b/ops/ansible/roles/minio/tasks/ubuntu.yml
@@ -2,10 +2,20 @@
 # roles/minio/tasks/ubuntu.yml
 
 # Setup file structure for persistent data
-- name: Create minio container named volume bind mountpoints
-  file:
-    path: "/data/minio/{{ item }}-export"
-    state: directory
-    group: docker
-    mode: 0775
-  with_sequence: "start=1 end=4 format=minio%02x"
+# Destroy and recreate any existing minio service data stores
+- hosts: docker-hosts
+  become: yes
+  become_method: sudo
+  tasks:
+  - name: Remove existing minio data stores
+    file:
+      path: "/data/minio/{{ item }}-export"
+      state: absent
+    with_sequence: "start=1 end=4 format=minio%02x"
+  - name: Create minio data stores
+    file:
+      path: "/data/minio/{{ item }}-export"
+      state: directory
+      group: docker
+      mode: 0775
+    with_sequence: "start=1 end=4 format=minio%02x"
