--- a/services/dy-2Dgraph/Dockerfile
+++ b/services/dy-2Dgraph/Dockerfile
@@ -22,10 +22,20 @@ LABEL org.label-schema.docker.cmd="docker run -it --rm -p 8888:8888 jupyter/base
 # service runtime settings
 LABEL simcore.service.settings='[{"name": "ports", "type": "int", "value": 8888}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
 
-
+# install the plotly, pandas, the jupyter extensions
 RUN pip install plotly \
-    pandas
-COPY plotly.ipynb .
+    pandas \
+    jupyter_contrib_nbextensions \
+    jupyter_dashboards && \
+    jupyter contrib nbextensions install --user && \
+    jupyter dashboards quick-setup --sys-prefix && \    
+    jupyter nbextension enable hide_input/main
+COPY --chown=jovyan:users plotly.ipynb .
+COPY --chown=jovyan:users /simcore_api ./simcore_api
+
+# define where the inputs shall be defined
+VOLUME /home/jovyan/data
+VOLUME /home/jovyan/config
 
 # starts notebook without token
 CMD [ "start-notebook.sh", "--NotebookApp.token=''", "--NotebookApp.tornado_settings={\"headers\":{\"Content-Security-Policy\":\"frame-ancestors+'self'+http://osparc01.speag.com:9081;+report-uri/api/security/csp-report\"}}", "--NotebookApp.default_url=/notebooks/plotly.ipynb" ]
