--- a/services/dy-2Dgraph/config/connection_config.json
+++ b/services/dy-2Dgraph/config/connection_config.json
@@ -5,7 +5,7 @@
         "type":"file",
         "format":"csv",
         "value":"test.csv",
-        "label":"computational datablahdjlksjdb",
+        "label":"computational data",
         "timestamp":"2018-05-23T15:34:51.511Z"
         },
         "input4":{
