--- a/services/dy-2Dgraph/config/connection_config.json
+++ b/services/dy-2Dgraph/config/connection_config.json
@@ -1,18 +1,18 @@
 {
-    "timestamp": "2018-05-23T15:34:53.511Z",
+    "version":"0.1",
     "inputs": [
         {
             "key": "in_1",
             "label": "computational data",
-            "desc": "these are computed data out of a pipeline",
+            "description": "these are computed data out of a pipeline",
             "type": "file-url",
-            "value": "test.csv",
+            "value": "/home/jovyan/data/outputControllerOut.dat",
             "timestamp": "2018-05-23T15:34:53.511Z"
         },
         {
             "key": "in_5",
-            "label": "hell",
-            "desc": "the beast",
+            "label": "some number",
+            "description": "numbering things",
             "type": "integer",
             "value": "666",
             "timestamp": "2018-05-23T15:34:53.511Z"
@@ -21,9 +21,10 @@
     "outputs": [
         {
             "key": "out_1",
+            "label": "some boolean output",
+            "description": "could be true or false...",
             "type": "bool",
             "value": "null",
-            "label": "some boolean output",
             "timestamp": "2018-05-23T15:34:53.511Z"
         }
     ]
