--- a/ops/ansible/roles/dockerhost/tasks/swarm-init.yml
+++ b/ops/ansible/roles/dockerhost/tasks/swarm-init.yml
@@ -1,6 +1,6 @@
 ---
 # Initialize swarm if not existing
-- hosts: docker-swarm-managers[0]
+- hosts: managers[0]
   become: yes
   become_method: sudo
   tasks:
@@ -21,7 +21,7 @@
     changed_when: False
 
 # Join additional mangers
-- hosts: docker-swarm-managers
+- hosts: managers
   become: yes
   become_method: sudo
   tasks:
@@ -30,15 +30,15 @@
     register: swarm_status
     changed_when: False
   - name: "Join docker swarm as a manager"
-    command: "docker swarm join --token {{ hostvars[groups['docker-swarm-managers'][0]]['manager_token']['stdout'] }} {{ hostvars[groups['docker-swarm-managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
+    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['manager_token']['stdout'] }} {{ hostvars[groups['managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
     when: 
     - "'active' not in swarm_status.stdout_lines"
-    - "inventory_hostname != groups['docker-swarm-managers'][0]"
+    - "inventory_hostname != groups['managers'][0]"
     retries: 3
     delay: 20
 
 # Join additional workers
-- hosts: docker-hosts
+- hosts: workers
   become: yes
   become_method: sudo
   tasks:
@@ -47,7 +47,7 @@
     register: swarm_status
     changed_when: False
   - name: "Join docker swarm as a worker"
-    command: "docker swarm join --token {{ hostvars[groups['docker-swarm-managers'][0]]['worker_token']['stdout'] }} {{ hostvars[groups['docker-swarm-managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
+    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['worker_token']['stdout'] }} {{ hostvars[groups['managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
     when: "'active' not in swarm_status.stdout_lines"
     retries: 3
     delay: 20
