--- a/ops/ansible/roles/dockerhost/tasks/swarm-init.yml
+++ b/ops/ansible/roles/dockerhost/tasks/swarm-init.yml
@@ -9,7 +9,7 @@
     register: swarm_status
     changed_when: False
   - name: "Initialize docker swarm as manager"
-    command: "docker swarm init --advertise-addr {{ ansible_eno1['ipv4']['address'] }}"
+    command: "docker swarm init --advertise-addr {{ ansible_host }}""
     when: "'active' not in swarm_status.stdout_lines"
   - name: "Get docker swarm manager token"
     command: "docker swarm join-token -q manager"
@@ -30,7 +30,7 @@
     register: swarm_status
     changed_when: False
   - name: "Join docker swarm as a manager"
-    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['manager_token']['stdout'] }} {{ hostvars[groups['managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
+    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['manager_token']['stdout'] }} {{ hostvars[groups['managers'][0]].ansible_host }}:2377"
     when: 
     - "'active' not in swarm_status.stdout_lines"
     - "inventory_hostname != groups['managers'][0]"
@@ -47,7 +47,7 @@
     register: swarm_status
     changed_when: False
   - name: "Join docker swarm as a worker"
-    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['worker_token']['stdout'] }} {{ hostvars[groups['managers'][0]]['ansible_eno1']['ipv4']['address'] }}:2377"
+    command: "docker swarm join --token {{ hostvars[groups['managers'][0]]['worker_token']['stdout'] }} {{ hostvars[groups['managers'][0]].ansible_host }}:2377"
     when: "'active' not in swarm_status.stdout_lines"
     retries: 3
     delay: 20
