adding write if modified function added tests

--- a/services/dy-2Dgraph/config/connection_config.json
+++ b/services/dy-2Dgraph/config/connection_config.json
@@ -13,7 +13,7 @@
             "key": "in_5",
             "label": "some number",
             "description": "numbering things",
-            "type": "integer",
+            "type": "int",
             "value": "666",
             "timestamp": "2018-05-23T15:34:53.511Z"
         }
